syntax = "proto3";

package randomPackage;

service Random {
    rpc Ping(PingRequest) returns (PingResponse) {};
}

message PingRequest{
    string  message  = 1;
}

message PingResponse{
    string  message  = 1;
}

